--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,34 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@font-face {
+    font-family: 'OpenDyslexic';
+    src: url('./assets/fonts/OpenDyslexic-Regular.woff2') format('woff2'),
+         url('./assets/fonts/OpenDyslexic-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'OpenDyslexic';
+    src: url('./assets/fonts/OpenDyslexic-Bold.woff2') format('woff2'),
+         url('./assets/fonts/OpenDyslexic-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'OpenDyslexic';
+    src: url('./assets/fonts/OpenDyslexic-Italic.woff2') format('woff2'),
+         url('./assets/fonts/OpenDyslexic-Italic.woff') format('woff');
+    font-weight: normal;
+    font-style: italic;
+  }
+
+  @font-face {
+    font-family: 'OpenDyslexic';
+    src: url('./assets/fonts/OpenDyslexic-Bold-Italic.woff2') format('woff2'),
+         url('./assets/fonts/OpenDyslexic-Bold-Italic.woff') format('woff');
+    font-weight: bold;
+    font-style: italic;
+  }
